--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@
 }
 .no-scrollbar {
   scrollbar-width: none;
-  -ms-overflow-style: none; 
+  -ms-overflow-style: none;
 }
 
 @theme inline {
@@ -148,66 +148,68 @@
 .loader:before {
   content: "Loading...";
 }
-
+.scrollbar-thin::-webkit-scrollbar {
+  width: 8px;
+}
 @keyframes l33 {
   0%, 15%, 75%, 100% {
-      text-shadow: 
-          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff, 
+      text-shadow:
+          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff,
           calc(-5 * var(--w)) 0 #fff, calc(-6 * var(--w)) 0 #fff, calc(-7 * var(--w)) 0 #fff, calc(-8 * var(--w)) 0 #fff, calc(-9 * var(--w)) 0 #fff;
   }
   20% {
-      text-shadow: 
-          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 9px #fff, calc(-4 * var(--w)) 0 #fff, 
+      text-shadow:
+          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 9px #fff, calc(-4 * var(--w)) 0 #fff,
           calc(-5 * var(--w)) 0 #fff, calc(-6 * var(--w)) 0 #fff, calc(-7 * var(--w)) 0 #fff, calc(-8 * var(--w)) 0 #fff, calc(-9 * var(--w)) 0 #fff;
   }
   25% {
-      text-shadow: 
-          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff, 
+      text-shadow:
+          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff,
           calc(-5 * var(--w)) 0 #fff, calc(-6 * var(--w)) 0 #fff, calc(-7 * var(--w)) 0 7px #fff, calc(-8 * var(--w)) 0 #fff, calc(-9 * var(--w)) 0 #fff;
   }
   30% {
-      text-shadow: 
-          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff, 
+      text-shadow:
+          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff,
           calc(-5 * var(--w)) 0 9px #fff, calc(-6 * var(--w)) 0 #fff, calc(-7 * var(--w)) 0 #fff, calc(-8 * var(--w)) 0 #fff, calc(-9 * var(--w)) 0 #fff;
   }
   35% {
-      text-shadow: 
-          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff, 
+      text-shadow:
+          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff,
           calc(-5 * var(--w)) 0 #fff, calc(-6 * var(--w)) 0 #fff, calc(-7 * var(--w)) 0 #fff, calc(-8 * var(--w)) 0 #fff, calc(-9 * var(--w)) 0 7px #fff;
   }
   40% {
-      text-shadow: 
-          calc(0 * var(--w)) 0 5px #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff, 
+      text-shadow:
+          calc(0 * var(--w)) 0 5px #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff,
           calc(-5 * var(--w)) 0 #fff, calc(-6 * var(--w)) 0 #fff, calc(-7 * var(--w)) 0 #fff, calc(-8 * var(--w)) 0 #fff, calc(-9 * var(--w)) 0 #fff;
   }
   45% {
-      text-shadow: 
-          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff, 
+      text-shadow:
+          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff,
           calc(-5 * var(--w)) 0 7px #fff, calc(-6 * var(--w)) 0 #fff, calc(-7 * var(--w)) 0 #fff, calc(-8 * var(--w)) 0 #fff, calc(-9 * var(--w)) 0 #fff;
   }
   50% {
-      text-shadow: 
-          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 5px #fff, 
+      text-shadow:
+          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 5px #fff,
           calc(-5 * var(--w)) 0 #fff, calc(-6 * var(--w)) 0 #fff, calc(-7 * var(--w)) 0 #fff, calc(-8 * var(--w)) 0 #fff, calc(-9 * var(--w)) 0 #fff;
   }
   55% {
-      text-shadow: 
-          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff, 
+      text-shadow:
+          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff,
           calc(-5 * var(--w)) 0 #fff, calc(-6 * var(--w)) 0 8px #fff, calc(-7 * var(--w)) 0 #fff, calc(-8 * var(--w)) 0 #fff, calc(-9 * var(--w)) 0 #fff;
   }
   60% {
-      text-shadow: 
-          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff, 
+      text-shadow:
+          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff,
           calc(-5 * var(--w)) 0 #fff, calc(-6 * var(--w)) 0 #fff, calc(-7 * var(--w)) 0 #fff, calc(-8 * var(--w)) 0 5px #fff, calc(-9 * var(--w)) 0 #fff;
   }
   65% {
-      text-shadow: 
-          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 7px #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff, 
+      text-shadow:
+          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 7px #fff, calc(-2 * var(--w)) 0 #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff,
           calc(-5 * var(--w)) 0 #fff, calc(-6 * var(--w)) 0 #fff, calc(-7 * var(--w)) 0 #fff, calc(-8 * var(--w)) 0 #fff, calc(-9 * var(--w)) 0 #fff;
   }
   70% {
-      text-shadow: 
-          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 9px #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff, 
+      text-shadow:
+          calc(0 * var(--w)) 0 #fff, calc(-1 * var(--w)) 0 #fff, calc(-2 * var(--w)) 0 9px #fff, calc(-3 * var(--w)) 0 #fff, calc(-4 * var(--w)) 0 #fff,
           calc(-5 * var(--w)) 0 #fff, calc(-6 * var(--w)) 0 #fff, calc(-7 * var(--w)) 0 #fff, calc(-8 * var(--w)) 0 #fff, calc(-9 * var(--w)) 0 #fff;
   }
 }
